2002-12-05  James Henstridge  <james@daa.com.au>

	* src/font-view.c (draw_text): move text drawing into separate
	function.
	(create_text_pixmap): handle bitmap fonts by drawing the test
	string at the correct size(s).
	(add_face_info): display some information about the font.

	* src/font-view.c (main): change so that it renders the text at a
	number of different sizes, like fontcarton did.  Need to show some
	info about the font too ...

2002-12-04  James Henstridge  <james@daa.com.au>

	* src/font-view.c (main): get font to render correctly.  Things
	work fine now that I am using the same FT_Library handle as Xft
	was ...
	(main): don't use Xft's FT_Library handle, since it is underscore
	prefixed.  The real problem is that XftInitFtLibrary() wasn't
	getting called.

	* src/font-view.c (main): start of simple font viewer program.
	Doesn't correctl display the text yet though :(

	* src/ftstream-vfs.c (FT_New_Face_From_URI): rename function to
	match naming scheme used elsewhere.

2002-12-02  James Henstridge  <james@daa.com.au>

	* src/thumbnailer.c (draw_char): split code for drawing character
	into separate function.
	(save_pixbuf): function to save the pixbuf.  We crop the pixbuf
	leaving PAD_PIXELS pixels round the edges.
	(draw_bitmap): handle monochrome bitmaps.
	(main): don't error out if we can't set pixel size.

	* src/ftstream-vfs.c (FT_New_URI_Face): unset the
	FT_FACE_FLAG_EXTERNAL_STREAM flag on the face, so that it gets
	freed with the face.  (this is a bit of a hack ...).

	* src/thumbnailer.c (main): fix bound on for loop (gaaaargh).
	(main): re-enable shutdown of the library

	* src/Makefile.am (libfont_method_la_LIBADD): fix typo.

	* src/ftstream-vfs.c (FT_New_URI_Face): FT_Stream is a pointer, so
	sizeof(FT_Stram) gives the wrong result :(

2002-12-01  James Henstridge  <james@daa.com.au>

	* src/font-method.c (do_read_directory): include ".directory" in
	the directory listing.
	(do_open): handle "/.directory".