@@ -1,0 +1,20 @@
+application/x-font-type1
+	default_action_type=application
+	default_application_id=gnome-font-viewer
+	short_list_application_ids_for_novice_user_level=gnome-font-viewer
+	short_list_application_ids_for_intermediate_user_level=gnome-font-viewer
+	short_list_application_ids_for_advanced_user_level=gnome-font-viewer
+
+application/x-font-ttf
+	default_action_type=application
+	default_application_id=gnome-font-viewer
+	short_list_application_ids_for_novice_user_level=gnome-font-viewer
+	short_list_application_ids_for_intermediate_user_level=gnome-font-viewer
+	short_list_application_ids_for_advanced_user_level=gnome-font-viewer
+
+application/x-font-pcf
+	default_action_type=application
+	default_application_id=gnome-font-viewer
+	short_list_application_ids_for_novice_user_level=gnome-font-viewer
+	short_list_application_ids_for_intermediate_user_level=gnome-font-viewer
+	short_list_application_ids_for_advanced_user_level=gnome-font-viewer
