@@ -1,10 +1,20 @@
 2002-12-05  James Henstridge  <james@daa.com.au>
 
+	* src/fontilus.keys: set gnome-font-viewer as default app for
+	type1, ttf and pcf fonts.
+
+	* src/fontilus.applications: add application registry file for
+	gnome-font-viewer.  Set it to accept URIs in file:/// and
+	fonts:///.  It supports others though ...
+
+	* src/Makefile.am: change executable names, and install them.
+
 	* src/font-view.c (draw_text): move text drawing into separate
 	function.
 	(create_text_pixmap): handle bitmap fonts by drawing the test
 	string at the correct size(s).
 	(add_face_info): display some information about the font.
+	(main): add an "in" shadow round the rendered text.
 
 	* src/font-view.c (main): change so that it renders the text at a
 	number of different sizes, like fontcarton did.  Need to show some
